Add Python CGI files

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -21,7 +21,7 @@
 		      </div>
 		    </td>
 		</table>
-		<select name="D-W-M" size=1>
+		<!-- <select name="D-W-M" size=1>
 			<option value = "0">Select Data Interval</option>
 			<option value = "1 min">1 Minute</option>
 			<option value = "10 min">10 Minutes</option>
@@ -29,5 +29,6 @@
 			<option value = "1 hr">1 Hour</option>
 		</select>
 		<div id="chart" style="width: 100%;"></div>
+    -->
 	</body>
 </html>
