--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 
 <html>
+
 <meta charset="utf-8"/>
 
 <script type="text/javascript">
@@ -9,13 +10,17 @@
 window.onload = function(){
 
 	var txtFile = new XMLHttpRequest();
-	txtFile.open("GET", "../HTML/Images/Bowl.txt", true);
+
 	//console.log(txtFile);
+	a = 5;
 	txtFile.onreadystatechange = function() {
 		if (txtFile.readyState == 4 && txtFile.status == 200) {
+			console.log(a);
+			console.log(txtFile.responseText);
 			allText = txtFile.responseText;
 	  	lines = txtFile.responseText.split("\n"); // Will separate each line into an array
-			if (lines[0] === 'G'){
+			console.log(lines[0]);
+			if (lines[0] === 'GDogbowl.png'){
 				document.getElementById('myImage').src='../HTML/Images/GDogbowl.png'
 				}
 			else if (lines[0] === 'YDogbowl.png') {
@@ -26,6 +31,8 @@ window.onload = function(){
 				}
 	   	}
   	}
+	 txtFile.open("GET", "Images/Bowl.txt", true);
+	 txtfile.send();
 	}
 </script>
   <!---	<link href="DogFeeder.css" rel="stylesheet" type="text/css"/>--->
