Got Graphing and dogBowl switch to work

--- a/HTML/graph2.html
+++ b/HTML/graph2.html
@@ -26,7 +26,7 @@
 	$.get("test.csv", function(data) {
 	    var chart = new CanvasJS.Chart("chartContainer", {
 		    title: {
-		         text: "Chart from CSV",
+		         text: "Dog Bowls Eaten",
 		    },
 		    data: [{
 		         type: "line",
