--- a/HTML/graph2.html
+++ b/HTML/graph2.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Chart using XML Data</title>
+<title>CSV Graph</title>
 <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+
+
+</head>
+<body>
+	<div id="chartContainer" style="width:100%; height:300px;"></div>
+</body>
+
 <script type="text/javascript">
-    window.onload = function() {
+    //window.onload = function() {
         var dataPoints = [];
 
         function getDataPointsFromCSV(csv) {
@@ -20,10 +27,11 @@
                         y: parseFloat(points[1])
                     });
                 }
+						//console.log('Response value: ' + dataPoints);
             return dataPoints;
         }
 
-	$.get("test.csv", function(data) {
+	$.get("test.csv", function chartOne (data) {
 	    var chart = new CanvasJS.Chart("chartContainer", {
 		    title: {
 		         text: "Dog Bowls Eaten",
@@ -37,10 +45,7 @@
 	      chart.render();
 
 	});
-  }
+  //}
 </script>
-</head>
-<body>
-	<div id="chartContainer" style="width:100%; height:300px;"></div>
-</body>
+
 </html>
