--- a/HTML/index3.html
+++ b/HTML/index3.html
@@ -6,22 +6,23 @@
 <meta charset="utf-8"/>
 <meta http-equiv="expires" content="0">
 <!--<meta http-equiv="refresh" content="20" > -->
-
+<!-- Uncomment for demo --> 
 	<head>
     <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-		<style>
+    <link href="DogFeeder.css" rel="stylesheet" type="text/css"/>
+    <style>
     body {background-color: powderblue;}
     h1   {color: blue;}
     p    {color: red;}
     </style>
-	</head>
+  </head>
 
 	<body>
-		<table class="centerTable" style="text-align: center;" >
+		<table class="centerTable" >
 		  <tr>
 		    <td>
 		      <div class="imgContainer">
@@ -36,27 +37,23 @@
 
 		        </div>
               <!-- -->
-            <div class="imgButton">
-		          <!-- <button id="Bowl" name ="Bowl"   >Feed me!</button> -->
-							<form enctype="multipart/form-data" action="../Python/writetrue.py" method="post">
-	 						<p><input type="submit" value="Feed ME!"></p>
-	 					</form>
-
+            <div class="imgButton" style="text-align: center;">
+		          <button id="Bowl" name ="Bowl"   >Feed me!</button>
 		        </div>
 
             <!-- -->
-            <div class="container">
+            <div class="container" style="text-align: center;">
               <div class="col-md-3">
                 <ul class="nav nav-pills nav-jt">
                   <li class="active"><a data-toggle="tab" id="bs-tab1" href="#tab1">Chart 1    </a></li>
                   <li><a data-toggle="tab" id="bs-tab2" href="#tab2">   Chart 2     </a></li>
                 </ul>
-                <div class="tab-content">
+                <div class="tab-content" >
                   <div id="tab1" class="tab-pane active">
-                    <div id="chart1Container" style="height: 300px; width: 500px;"></div>
+                    <div id="chart1Container" style="height: 300px; width: 500px; text-align: center;"></div>
                   </div>
                   <div id="tab2" class="tab-pane">
-                    <div id="chart2Container" style=" height: 300px; width: 500px;"></div>
+                    <div id="chart2Container" style=" height: 300px; width: 500px; text-align: center;"></div>
                   </div>
                 </div>
               </div>
@@ -130,5 +127,7 @@
       chart1.render();
     });
   }
+
+
   </script>
 </html>
